--- a/clientes/templates/clientes.html
+++ b/clientes/templates/clientes.html
@@ -19,11 +19,11 @@
         <div class="adicionar-cliente">
             <form action="{% url "row">
                     <div class="col-md">
-                        <p>Nome:</p>
+                        <p>Seu Nome:</p>
                         <input type="text" class="form-control" placeholder="Primeiro nome" name="nome">
                     </div>
                     <div class="col-md">
-                        <p>Sobrenome:</p>
+                        <p>Seu Sobrenome:</p>
                         <input type="text" class="form-control" placeholder="Sobrenome" name="sobrenome">
                     </div>
                 </div>
