--- a/clientes/templates/clientes.html
+++ b/clientes/templates/clientes.html
@@ -10,10 +10,10 @@
     <div class="container">
         <div class="row">
                 <div class="col-md card-dashboard">
-                    <p class="text-card">Adicionar Carro</p>
+                    <p class="text-card">Novo Carro</p>
                 </div>
                 <div class="col-md card-dashboard">
-                    <p class="text-card">Atualizar Cadastro</p>
+                    <p class="text-card">Atualize seu Cadastro</p>
                 </div>
         </div>
         <div class="adicionar-cliente">
