alteração das cores

--- a/templates/static/css/general.css
+++ b/templates/static/css/general.css
@@ -1,9 +1,9 @@
 :root{
      
-    --main-color: #ac4147;
-    --dark-color: #411f2d;
-    --light-color: #ffc27f;
-    --contrast-color: #f88863;
-    --differential-color: #ffe29a;
+    --main-color: #19d66e;
+    --dark-color: #179441;
+    --light-color: #23a162;
+    --contrast-color: #3e6b4f;
+    --differential-color: #447a4d;
 
 }
