alteração de email

--- a/clientes/templates/clientes.html
+++ b/clientes/templates/clientes.html
@@ -28,7 +28,7 @@
                     </div>
                 </div>
                     <br>
-                    <p>E-mail:</p>
+                    <p>Email:</p>
                     <input type="email" class="form-control" placeholder="nome@email.com" name="email">
                     <br>
                     <p>CPF:</p>
