teste da branch

--- a/clientes/templates/clientes.html
+++ b/clientes/templates/clientes.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="row">
                 <div class="col-md card-dashboard">
-                    <p class="text-card">Novo Carro</p>
+                    <p class="text-card">carro novo</p>
                 </div>
                 <div class="col-md card-dashboard">
                     <p class="text-card">Atualize seu Cadastro</p>
