--- a/clientes/templates/clientes.html
+++ b/clientes/templates/clientes.html
@@ -13,7 +13,7 @@
                     <p class="text-card">Novo Carro</p>
                 </div>
                 <div class="col-md card-dashboard">
-                    <p class="text-card">Atualize seu Cadastro</p>
+                    <p class="text-card">Atualize Cadastro</p>
                 </div>
         </div>
         <div class="adicionar-cliente">
