--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
     
     <div class="sidebar">
         <div class="logo-details">
-            <div class="logo_name">RGScar</div>
+            <div class="logo_name">RGSCAR</div>
             <i class='bx bx-menu' id="btn" ></i>
         </div>
         <ul class="nav-list">
