--- a/templates/base.html
+++ b/templates/base.html
@@ -25,9 +25,9 @@
           <li>
             <a href="#">
               <i class='bx bx-grid-alt'></i>
-              <span class="links_name">Página inicial</span>
+              <span class="links_name">Página Inicial</span>
             </a>
-            <span class="tooltip">Página inicial</span>
+            <span class="tooltip">Página Inicial</span>
           </li>
           <li>
           <a href="#">
